# docs/openapi-core.yml
@@ -7,46 +7,46 @@ info:
 servers:
   - url: http://localhost:4000
 tags:
-  - name: examples
+  - name: books
 paths:
-  /examples:
+  /books:
     post:
       tags:
-        - examples
-      summary: Example POST route
-      description: Description of an example POST route
+        - books
+      summary: Book POST route
+      description: Description of an book POST route
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExample'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
     get:
       tags:
-        - examples
-      summary: Example GET route
-      description: Description of an example GET route
+        - books
+      summary: Book GET route
+      description: Description of an book GET route
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AllExamples'
-  /examples/{id}:
+                $ref: '#/components/schemas/AllBooks'
+  /books/{id}:
     put:
       tags:
-        - examples
-      summary: Example PUT route
-      description: Description of an example PUT route
+        - books
+      summary: Book PUT route
+      description: Description of an book PUT route
       parameters:
         - name: id
           in: path
-          description: The ID of the example to update
+          description: The ID of the book to update
           required: true
           schema:
             type: integer
@@ -54,22 +54,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExample'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
     delete:
       tags:
-        - examples
-      summary: Example DELETE route
-      description: Description of an example DELETE route
+        - books
+      summary: Book DELETE route
+      description: Description of an book DELETE route
       parameters:
         - name: id
           in: path
-          description: The ID of the example to delete
+          description: The ID of the book to delete
           required: true
           schema:
             type: integer
@@ -78,39 +78,72 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
 
 components:
   schemas:
-    CreateExample:
+    CreateBook:
       type: object
-      required: [propertyOne, propertyTwo]
+      required: [title, genre,Author,Publisher]
       properties:
-        propertyOne:
+        title:
           type: string
-          example: "Example Value"
-        propertyTwo:
-          type: email
-          format: email
-          example: "example@email.value"
-    Example:
+          example: "book title"
+        genre:
+          type: string
+          example: "book genre"
+        Author:
+          type: object
+        Publisher:
+          type: object
+    Book:
       type: object
       properties:
         id:
           type: integer
           example: 1
-        propertyOne:
+        title:
           type: string
-          example: "Example Value"
-        propertyTwo:
+          example: "book title"
+        genre:
           type: string
-          example: "example@email.value"
-        createdAt:
+          example: "book genre"
+        Author:
+          type: object
+        Publisher:
+          type: object
+    Author:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        first_name:
           type: string
-          format: DateTime
-          pattern: YYYY-MM-DDTHH:MM:SS
-          example: 2023-03-14T11:01:56.633+00:00
-    AllExamples:
+          example: "first_name"
+        last_name:
+          type: string
+          example: "last_name"
+        email:
+          type: String
+          format: email
+          example: "email@example.com"
+        alive:
+          type: boolean
+          example: true
+    Publisher:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: author
+        location:
+          type: string
+          example: hell
+    AllBooks:
       type: array
       items:
-        $ref: '#/components/schemas/Example'
+        $ref: '#/components/schemas/Book'
