# src/main/java/com/booleanuk/api/controllers/BookController.java
@@ -1,0 +1,23 @@
+package com.booleanuk.api.controllers;
+
+import com.booleanuk.api.models.Book;
+import com.booleanuk.api.repositories.BookRepo;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+
+@RestController
+@RequestMapping("books")
+public class BookController {
+
+    @Autowired
+    BookRepo bookRepo;
+
+    @GetMapping
+    public List<Book> getAllBooks() {
+        return bookRepo.findAll();
+    }
+}
