# src/main/java/com/booleanuk/api/models/Author.java
@@ -1,0 +1,31 @@
+package com.booleanuk.api.models;
+
+import com.fasterxml.jackson.annotation.JsonManagedReference;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Entity
+@Table(name = "authors")
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class Author {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int id;
+    @Column(name = "first_name")
+    private String firstName;
+    @Column(name = "last_name")
+    private String lastName;
+    @Column(name = "email")
+    private String email;
+    @Column(name = "alive")
+    private boolean alive;
+    @OneToMany(mappedBy = "author")
+    @JsonManagedReference
+    private List<Book> books;
+}
