# src/main/java/com/booleanuk/api/models/Publisher.java
@@ -1,0 +1,27 @@
+package com.booleanuk.api.models;
+
+import com.fasterxml.jackson.annotation.JsonManagedReference;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Entity
+@Table(name = "publishers")
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class Publisher {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int id;
+    @Column(name = "name")
+    private String name;
+    @Column(name = "location")
+    private String location;
+    @OneToMany(mappedBy = "publisher")
+    @JsonManagedReference
+    private List<Book> books;
+}
